<resources>
    <!-- VS -->
    <string name="app_name">Wildcare</string>
    <string name="sign_in">Sign In</string>
    <string name="username_email">Username/Email Address</string>
    <string name="password">Password</string>
    <string name="register_now">Don’t have an account? Register Now!</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="password_format">Your password must contain at least 8 characters with alphanumeric characters, uppercase letter and special characters (@#$%/)</string>
    <string name="retype_password">Retype password</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="campaign">Campaign</string>
    <string name="profile">Profile</string>
    <string name="wildcare">Wildcare</string>

    <!-- ZX -->
    <string name="user_profile">User Profile</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="open">opened</string>
    <string name="close">closed</string>
    <string name="day_mode">%s</string>
    <string name="night_mode">%s</string>
    <string name="tab_layout_description">Tab layout for navigation</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--today-->
    <string name="dashboard">Dashboard</string>
    <string name="todays_donation">Today\'s Donation</string>
    <string name="donation_amount">RM1000.00</string>
    <string name="active_campaign">Active Campaign</string>
    <string name="active_campaign_number">4</string>
    <string name="volunteer_application">Volunteer Application</string>
    <string name="volunteer_application_number">20</string>


    <string name="currency">MYR</string>
    <string name="donation_tab_text">Donation</string>
    <string name="volunteer_tab_text">Volunteer</string>
    <string name="dialog_title">Haha</string>

    <!--    animal donation texts -->
    <string name="tiger_extinctionTitle">Less than 150 left</string>
    <string name="tiger_awareness">
        There are now less than 150 Malayan tigers left in Malaysia compared
        to the 3,000 tigers that once roamed our forests in the 1950s.
    </string>
    <string name="tiger_threatTitle">Threats</string>
    <string name="tiger_threatMsg">
        The future of our Malayan tigers is at stake as their existence is severely
        threatened by poaching and the illegal wildlife trade, habitat loss due
        to deforestation and fragmentation,
        as well as overhunting of the tigers.
    </string>
    <string name="tiger_MustDoTitle">We must act now</string>
    <string name="tiger_MustDoMsg">
        The future of our Malayan tigers is at stake as their existence is severely threatened
        by poaching and the illegal wildlife trade, habitat loss due to deforestation and fragmentation,
        as well as overhunting of the tigers.
    </string>
    <string name="tiger_supportMsg">
        \nWe urgently need your support to help our frontliners in the field.
        WWF-Malaysia conducts intensive patrolling in Belum-Temengor and monitors poaching hotspots,
        whilst channeling relevant information to enforcement agencies. This has enabled:
        \n\n&#8226; More ground to be patrolled.
        \n\n&#8226; More threats to be uncovered.
        \n\n&#8226; More snares to be removed.
        \n\n&#8226; More arrests of poachers.
    </string>

    <string name="elephant_extinctionTitle">ONLY 1,500 LEFT</string>
    <string name="elephant_awareness">
        These endemic Bornean elephants are losing their homes and families.
        With only about 1,500 of them left in the wild in Sabah, urgent and continuous actions
        need to be taken in order to conserve these gentle giants.
    </string>
    <string name="elephant_threatTitle">Threats</string>
    <string name="elephant_threatMsg">
        Sadly, Bornean elephants are:
        \n\n&#8226; Losing their habitat due to displacement by large-scale agriculture,
                    plantations and the construction of road infrastructures
                    that do not incorporate elephant requirements.
        \n\n&#8226; Coming into more contact with people thus increasing human elephant
                    conflict due to loss and fragmentation of forests.
    </string>
    <string name="elephant_MustDoTitle">Urgent Conservation Efforts</string>
    <string name="elephant_MustDoMsg">Donate today and help WWF-Malaysia to:</string>
    <string name="elephant_supportMsg">
        \n\n&#8226; Conduct elephant satellite collaring to identify their key space
                    requirements and to reduce future conflict.
        \n\n&#8226; Establish wildlife corridors to connect fragmented habitats
        \n\n&#8226; Promote coexistence between humans and wildlife.
        \n\n&#8226; Collaborate with government and non-government agencies on wildlife surveys, research and
                    capacity building for protected area management. Support sustainable products such as
                    RSPO certified Palm oil products and FSC certified paper products.
    </string>

    <string name="sea_turtle_extinctionTitle">DECLINING POPULATION</string>
    <string name="sea_turtle_awareness">Marine turtle numbers continue to plummet in most parts of the world.</string>
    <string name="sea_turtle_threatTitle">Threats</string>
    <string name="sea_turtle_threatMsg">
        \n\n&#8226;Loss of nesting and feeding habitats.
        \n\n&#8226; Egg-collection for consumption and trade.
        \n\n&#8226; Fishery-related mortality and pollution.
        \n\nHawksbill turtles are critically endangered. Green and olive ridley turtles are endangered.
    </string>
    <string name="sea_turtle_MustDoTitle">URGENT CONSERVATION EFFORTS</string>
    <string name="sea_turtle_MustDoMsg">You have the power to save their lives; make a donation today and help WWF-Malaysia to:</string>
    <string name="sea_turtle_supportMsg">
        \n\n&#8226; Monitor and patrol nesting beaches to minimise the poaching of turtle eggs.
        \n\n&#8226; Patrol turtle foraging grounds to prevent poaching.
        \n\n&#8226; Conduct research to understand marine turtle habitats and biology, as well as the effects
                    of climate change, to enhance conservation efforts.
        \n\n&#8226; Continue our efforts in calling for stronger and more holistic laws as well as
                    strengthening ground and transboundary enforcement to protect turtles.
    </string>
    <string name="orang_utan_extinctionTitle">AMAZING WILDLIFE MOTHERS</string>
    <string name="orang_utan_awareness">
        The bond between an orangutan mother and her young is one of the strongest in nature.
        During the first two years of life,
        the young rely entirely on their mothers for both food and transportation.
        The moms stay with their young for six to seven years, teaching them where to find food,
        what and how to eat and the
        technique for building a sleeping nest. Female orangutans are known to “visit”
        their mothers until they reach the age of 15 or 16.
    </string>
    <string name="orang_utan_threatTitle">IMPORTANCE AND THREATS</string>
    <string name="orang_utan_threatMsg">
        Sadly, orangutan numbers are declining due to:
        \n\n&#8226; Habitat degradation caused by unsustainable logging practices,
                    unsustainable land-use planning as well as forest
                    conversion for agriculture and infrastructure development.
        \n\n&#8226; Fragmented habitats resulting in isolated orangutan populations.
    </string>
    <string name="orang_utan_MustDoTitle">Urgent conservation efforts.</string>
    <string name="orang_utan_MustDoMsg">Donate today and help WWF-Malaysia to:</string>
    <string name="orang_utan_supportMsg">
        \n\n&#8226; Carry out restoration of logged-over and fire-impacted forest areas by replanting a
                    mixture of native tree species.
        \n\n&#8226; Promote protection of crucial habitats.
        \n\n&#8226; Increase awareness of orangutan conservation.
        \n\n&#8226; Establish wildlife corridors to maintain wildlife connectivity.
        \n\n&#8226; Allow orangutans to disperse freely around non-forested areas to support gene flow.
                    Support sustainable products such as RSPO certified Palm oil products
                    and FSC certified paper products.
    </string>
    <string name="donation">Donation</string>
    <string name="volunteer">Volunteer</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="volunteer_application_list">Volunteer Application List</string>
    <string name="create_volunteer_title">Create Volunteer</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="org_intro">A dynamic organization dedicated to global conservation and the protection of biodiversity. Through innovative initiatives, community engagement, and scientific research, Wildcare strives to safeguard endangered species, restore habitats, and inspire a sustainable future for our planet. Join us in preserving the wonders of the natural world.</string>
    <string name="org_goal">At Wildcare, our goals are clear and ambitious. We aim to preserve and restore critical ecosystems, safeguard endangered species from extinction, promote sustainable practices, raise awareness about environmental issues, and empower communities to actively participate in conservation efforts. Together, we can create a thriving planet where wildlife and humans coexist harmoniously, ensuring a sustainable future for generations to come.</string>
</resources>