<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notification"
            android:enabled="true"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />

        <item
            android:id="@+id/contact_us"
            android:enabled="true"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/about_us"
            android:enabled="true"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/setting"
            android:enabled="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"
                />
        </menu>
    </item>

    <item android:id="@+id/switch_toggle_item"
        android:title=""/>

</menu>