<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <RelativeLayout
        android:id="@+id/donation_container"
        style="@style/dashboard_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/donation_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/outline_volunteer_activism_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/donation_icon"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today_donation"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todays_donation"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/donation_amount"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donation_amount"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/campaign_volunteer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donation_container">

        <LinearLayout
            android:id="@+id/active_campaign_container"
            style="@style/dashboard_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/active_campaign"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_campaign"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/active_campaign_number"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_campaign_number"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/volunteer_application_container"
            style="@style/dashboard_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/volunteer_application"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteer_application"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/volunteer_application_number"
                style="@style/dashboard_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteer_application_number"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>