<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!--register title-->
    <TextView
        android:id="@+id/register_title"
        style="@style/register_title_style"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_input"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_input_text"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/outline_email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username_input"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_input_text"
            android:inputType="text"
            android:drawableLeft="@drawable/outline_person"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_input"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_input_text"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_format"
        style="@style/register_password_format"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/password_format"
        app:layout_constraintEnd_toEndOf="@id/register_password_input"
        app:layout_constraintStart_toStartOf="@id/register_password_input"
        app:layout_constraintTop_toBottomOf="@id/register_password_input" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_retype_password_input"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/retype_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_format">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_retype_password_input_text"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        style="@style/login_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>