<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:text="@string/sign_in"
        style="@style/login_title_style"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_email_icon"
        style="@style/login_icon_style"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/outline_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input"
        style="@style/login_input_style"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/username_email"
        app:layout_constraintBottom_toBottomOf="@id/login_email_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_email_icon"
        app:layout_constraintTop_toTopOf="@id/login_email_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input_text"
            android:inputType="text|textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/login_password_icon"
        style="@style/login_icon_style"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/outline_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        style="@style/login_input_style"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="@id/login_password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_password_icon"
        app:layout_constraintTop_toTopOf="@id/login_password_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/login_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/register_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_now_button"
        style="@style/register_now_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>