<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <!--sign in title-->
    <TextView
        android:id="@+id/login_title"
        android:text="@string/sign_in"
        style="@style/login_title_style"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--user type tab-->
    <RelativeLayout
        android:id="@+id/login_tab_container"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/tab_border"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/user_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_active_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="User"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/admin_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="Admin"
                android:textSize="20sp"
                android:textColor="#4D000000" />
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input"
        android:hint="@string/username_email"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tab_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input_text"
            android:inputType="text|textEmailAddress"
            android:drawableLeft="@drawable/outline_email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_margin="20dp"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input_text"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_pw_button"
        style="@style/register_now_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_password_input"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        app:cornerRadius="20dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/register_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_now_button"
        style="@style/register_now_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>